<resources>
    <string name="app_name">轮通惠</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <string name="search_product">搜索商品</string>
    <string name="today_bargain_price">今日剁手价</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="mine">我的</string>
    <string name="form">订单</string>
    <string name="car">购物车</string>
    <string name="mine_not_register">您还没登录,快登录吧</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="password">密码</string>
    <string name="phone_number">手机号</string>
    <string name="location">位置</string>
    <string name="input_username">用户名</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="get_check_code">获取验证码</string>
    <string name="input_check_code">请输入验证码</string>
    <string name="input_recommend_code">请入输推荐码(选填)</string>
    <string name="input_password">请输入密码</string>
    <string name="info_input_phone_number">请输入11位有效电话号码</string>
    <string name="register_success">注册成功</string>
    <string name="check_code_error">验证码错误</string>
    <string name="get_verification_code">重新获取</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="select_region">选择省市区</string>
    <string name="consign_person_not_empty">联系人不能为空</string>
    <string name="mobile_not_empty">联系方式不能为空</string>
    <string name="exit">退出</string>
    <string name="exit_login">退出登录</string>
    <string name="network_error">请检查您的网络</string>
    <string name="http_error">请求过程中出现错误</string>
    <string name="conversion_error">数据解析出错</string>
    <string name="unexpected_error">发生未知错误</string>
    <string name="goods_category_brand_list">查询结果</string>
    <string name="sales_volume">销量</string>
    <string name="price">价格</string>
    <string name="newest">最新</string>
    <string name="buy">购买</string>
    <string name="selling_price">售价</string>
    <string name="test">测试文字</string>
    <string name="buy_success">购买成功</string>
    <string name="empty"/>
    <string name="goods_info">商品信息</string>
    <string name="standard">规格:</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods_introduce">商品介绍</string>
    <string name="goods_name">商品名称:</string>
    <string name="goods_explain">简单说明:</string>
    <string name="goods_code">商品编码:</string>
    <string name="count_explain">数量说明:</string>
    <string name="goods_size">  尺寸:</string>
    <string name="shop_price">销售价格:</string>
    <string name="shopping_car">购物车</string>
    <string name="goods_list">商品列表</string>
    <string name="full_select">全选</string>
    <string name="login_remind">请登录</string>
    <string name="clear">清空</string>
    <string name="clear_shopping_car_message">确定清空购物车吗?</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="goto_addition">去添加</string>
    <string name="empty_message">什么也没有</string>
    <string name="btn_empty_retry">在试试</string>
    <string name="btn_error_retry">重试</string>
    <string name="loading_text">正在加载..</string>
    <string name="phone">手机</string>
    <string name="luntonghui_register">轮通惠注册</string>
    <string name="input_phone">请输入您的手机号码</string>
    <string name="next_step">下一步</string>
    <string name="verification_code">验证码</string>
    <string name="hint_input_verification_code">请输入短信验证码</string>
    <string name="complete">完成</string>
    <string name="login_hint">用户名/手机号</string>
    <string name="login_hint_input_password">请输入密码</string>
    <string name="setting_baseinfo">设置基本信息</string>
    <string name="please_input_number">请输入数字</string>
    <string name="product_info">产品详情</string>
    <string name="mine_check_whole_order">查看全部订单</string>
    <string name="mine_wait_deliver">待发货</string>
    <string name="mine_has_deliver">已发货</string>
    <string name="mine_has_cancel">已取消</string>
    <string name="mine_whole_order">全部订单</string>
    <string name="mine_attention">我的收藏</string>
    <string name="mine_whole_attention">查看全部收藏</string>
    <string name="mine_deliver_manager">收货地址管理</string>
    <string name="mine_service_phone">客服电话</string>
    <string name="mine_work">我的工作</string>
    <string name="dispatch_total">配送总览</string>
    <string name="car_empty_front">您还未登录,请立即 </string>
    <string name="car_empty_behind"> 享受购物过程</string>
    <string name="car_is_empty">     购物车是空的</string>
    <string name="go_browser">去逛逛</string>
    <string name="car_count_unit">数量/件:</string>
    <string name="continue_shopping">继续购物</string>
    <string name="cash_deliver">货到付款</string>
    <string name="bank_deliver">银行卡支付</string>
    <string name="order_exit_info">便宜不等人,请三思而行</string>
    <string name="use">使用</string>
    <string name="lun_tong_money">轮通币</string>
    <string name="think_again">我再想想</string>
    <string name="go_away">去意已决</string>
    <string name="talk_to_business">对商家留言(最多输入50个汉字)</string>
    <string name="goods_value">商品金额</string>
    <string name="freight">运费</string>
    <string name="submit_order">提交订单</string>
    <string name="produce_luntongbi_can_use_font">轮通币 可用</string>
    <string name="produce_luntongbi_can_use_behind">个轮通币 抵</string>
    <string name="luntong_money_warning">最多可使用%1$s</string>
    <string name="no_address_info">没有收货地址是否去新建?</string>
    <string name="sure">确定</string>
    <string name="order_confirm_success">恭喜您,下单成功</string>
    <string name="does_not_deploy">暂未开放</string>
    <string name="hot_search">热搜</string>
    <string name="history_search">历史搜索</string>
    <string name="clear_history_search">清空历史搜索</string>
    <string name="search_luntong_goods">搜索轮通惠商品</string>
    <string name="please_input_search_content">请输入搜索商品</string>
    <string name="network_connect_fail">网络连接失败</string>
    <string name="activity_area">活动专区</string>
    <string name="tangze">唐泽</string>
    <string name="jiluer">吉路尔</string>
    <string name="chongdianqi">充电器</string>
    <string name="luntai">轮胎</string>
    <string name="activity_area_mine_attention">我的收藏</string>
    <string name="song_lungtongbi">签到领轮通币</string>
    <string name="update_not">暂不升级</string>
    <string name="update_now">立刻升级</string>
    <string name="updating">升级中...</string>
    <string name="install_fail">安装失败</string>
    <string name="update_fail">升级失败</string>
    <string name="check_version">检查版本更新</string>
    <string name="mine_setting">我的设置</string>
    <string name="key_share">一键分享</string>
    <string name="our_update">App 升级了  </string>
    <string name="update_content">更新内容:</string>
    <string name="current_version">当前版本号:</string>
    <string name="order_detail">订单详情</string>
    <string name="whole">全部</string>
    <string name="wait_confirm">待确认</string>
    <string name="wait_goods">待送货</string>
    <string name="wait_play">待付款</string>
    <string name="has_cancel">已取消</string>
    <string name="not_own_order">您还没有相关的订单</string>
    <string name="order_go_around">您可以随意去逛逛</string>
    <string name="at_will_around">随便逛逛</string>
    <string name="order_sn">订单编号:</string>
    <string name="order_date">订单日期:</string>
    <string name="order_pay">实付金额:</string>
    <string name="look_over">查看</string>
    <string name="waiting_for">敬请期待</string>
    <string name="base_info">基本信息</string>
    <string name="pay_info">付款信息</string>
    <string name="distribution_info">配送信息</string>
    <string name="merchant_message">商家留言</string>
    <string name="order_tracking">订单跟踪</string>
    <string name="time">时间</string>
    <string name="state">状态</string>
    <string name="cancel_order">取消订单</string>
    <string name="order_state">订单状态:</string>
    <string name="order_serial_number">订单编号:</string>
    <string name="order_money">订单金额:</string>
    <string name="place_an_order">下单日期:</string>
    <string name="play_info">付款信息</string>
    <string name="play_method">付款方式:</string>
    <string name="goods_value1">商品金额:</string>
    <string name="freight_value">运费金额:</string>
    <string name="favorable_value">优惠金额:</string>
    <string name="need_pay_value">应付金额:</string>
    <string name="has_pay_value">已付金额:</string>
    <string name="pay_state">付款状态:</string>
    <string name="consignee">收货姓名:</string>
    <string name="deliveryAddress">收货地址:</string>
    <string name="phone_number1">手机号码:</string>
    <string name="service_phone">400-006-8040</string>
    <string name="edit_cart_success">更新购物车成功</string>
    <string name="input_buy_count">请输入购物数量</string>
    <string name="please_create_address_at_first">请选创建收货地址</string>
    <string name="sure_delete">确定要删除吗?</string>
    <string name="choose_delete">狠心删除</string>
    <string name="choose_not_delete">暂不删除</string>
    <string name="cheap_not_alway_wait">便宜不等人,请三思而行</string>
    <string name="to_think_again">我再想想</string>
    <string name="go_alway">去意已决</string>
    <string name="select_default_address">请设置为默认地址</string>
    <string name="has_signin">已签到</string>
    <string name="saiyang">赛阳</string>
    <string name="jierpu">吉尔普</string>
    <string name="yingfa_chongdianqi">英发充电器</string>
    <string name="signin_value">+1</string>
    <string name="not_signin">签到送轮通币</string>
    <string name="exit_app">退出</string>
    <string name="guige">规格</string>
    <string name="sure_exit">确定要退出吗?</string>
    <string name="delete_success">删除成功</string>
    <string name="sure_create_order">你确定生成订单吗?</string>
    <string name="create_order">亲!订单已生成,有事先Call</string>
    <string name="begin_panic_buy">10:00开抢</string>
    <string name="distance_fiish">距结束</string>
    <string name="colon">:</string>
    <string name="kill_zero">00</string>
    <string name="everyday_second_kill">每日秒杀</string>
    <string name="today_second_kill">今日秒杀</string>
    <string name="set_alarm_clock">设置闹钟</string>
    <string name="rush_to_purchash">去抢购</string>
    <string name="hard_work_next_time">下次努力</string>
    <string name="none">无</string>
    <string name="one_alarm_clock">一次性闹钟</string>
    <string name="repeat_alarm_clock">重复性闹钟</string>
    <string name="set_alarm_clock_type">设置闹钟</string>
    <string name="set_alarm_clock_success">秒杀闹钟已开启,将于秒杀前1分钟提醒您</string>
    <string name="set_clock_success">99人已添加</string>
    <string name="cancel_alarm_clock_success">秒杀闹钟已关，你可能抢不到哟~</string>
    <string name="has_set">已设置</string>
    <string name="second_kill_will_begin">秒杀继将开始,赶紧去抢购</string>
    <string name="begin_rush">开抢了</string>
    <string name="can_rush_luntong_goods">快去抢购轮通惠秒杀商品!</string>
    <string name="go_rush_goods">赶紧抢购</string>
    <string name="cancel_rush_goods">含泪离去</string>
    <string name="has_use_over_register_count">您已经申请了三次， 有事请拔打客服电话：400-006-8040</string>
    <string name="empty_rush_goods_size">暂时没有秒杀商品了.</string>
    <string name="mine_recommend_code_is">我的推荐码是:</string>
    <string name="mine_customer_people_list">我的客户列表</string>
    <string name="mine_customer_order_list">我的客户订单</string>
    <string name="mine_service_cost_query">服务费用查询</string>
    <string name="mine_is_service_provider">我是服务商</string>
    <string name="mine_outstanding_statistics">年度业绩统计</string>
    <string name="mine_outstanding_statistics_month">月度业绩统计</string>
    <string name="mine_order_query">订单查看</string>
    <string name="today_order_list">今天订单</string>
    <string name="yesterday_order_list">昨天订单</string>
    <string name="total_order_list">总订单</string>
    <string name="serial_number">编 号:</string>
    <string name="account">账 号:</string>
    <string name="money">金 额:</string>
    <string name="service_cost">服务费:</string>
    <string name="reset_password">重设密码</string>
    <string name="reset_password_confirm">确认密码</string>
    <string name="input_reset_password">请输入新密码(6位以上)</string>
    <string name="input_reset_password_confirm">请再次输入新密码</string>
    <string name="return_order">退货单</string>
</resources>