<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:id="@+id/title"
        android:textColor="@color/useful_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sure_create_order" />

    <TextView
        android:textColor="@color/useful_grey"
        android:id="@+id/message"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:text="@string/create_order"/>

    <TextView
        android:layout_marginTop="2dp"
        android:textSize="16sp"
        android:textColor="@color/useful_grey"
        android:layout_gravity="center_horizontal"
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_phone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/negative"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/alert_cancel_style"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:layout_marginBottom="10dp"
            android:id="@+id/positive"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/alert_confirm_style"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>