<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar_base" />

    <LinearLayout
        android:id="@+id/login_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="@color/background_main_grey">

        <TextView
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_empty_front" />
        <Button
            android:id="@+id/car_login"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:background="@drawable/shopping_cart_empty_login"
            android:text="@string/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_empty_behind" />
    </LinearLayout>

    <include layout="@layout/fragment_car_empty_view1"/>


</LinearLayout>