<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textColor="@color/useful_grey"
        android:textSize="18sp"
        tools:text="轮通惠推出新版本了" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/set_alarm_clock_type" />

        <RadioGroup
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/set_alarm_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <RadioButton
                android:id="@+id/set_alarm_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_alarm_clock" />

            <RadioButton
                android:id="@+id/set_alarm_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_alarm_clock" />
        </RadioGroup>
    </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <com.louie.luntonghui.view.widget.WheelView
             android:id="@+id/wv_hour"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />

         <com.louie.luntonghui.view.widget.WheelView
             android:id="@+id/wv_minue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
     </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/positive"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/alert_confirm_style"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/negative"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/alert_cancel_style"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>