<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/base_frame"
        android:orientation="horizontal">

        <TextView
            style="@style/register_step_style"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textSize="14sp" />

        <View
            style="@style/register_step_break_line_view"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/base_frame_stroke" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/reset_password"
            style="@style/register_step_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_reset_password"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="@drawable/base_frame"
        android:orientation="horizontal">

        <TextView
            style="@style/register_step_style"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:text="@string/reset_password_confirm"
            android:textSize="14sp" />

        <View
            style="@style/register_step_break_line_view"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/base_frame_stroke" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/reset_password_confirm"
            style="@style/register_step_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_reset_password_confirm"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:id="@+id/next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:background="@drawable/next_step"/>


</LinearLayout>