<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/useful_grey"
        android:text="@string/our_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/useful_break_line_color"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/update_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/useful_grey"
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        tools:text="轮通惠推出新版本了" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp">

        <Button
            android:layout_marginBottom="10dp"
            android:id="@+id/positive"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/alert_confirm_style"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/negative"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/alert_cancel_style"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>
